--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,4 +2,5 @@
   Site footer files
 </footer>
 
-<script src="{{ "/js/semantic.min.js" | prepend: site.baseurl }}"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<script src="{{ "/js/bootstrap.min.js" | prepend: site.baseurl }}"></script>
