--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,7 +10,7 @@
             </button>
             <a class="navbar-brand" href="#">Smart Electrical GB</a>
         </div>
-        <div id="navbar" class="collapse navbar-collapse">
+        <div id="navbar" class="collapse navbar-collapse navbar-right">
             <ul class="nav navbar-nav">
                 <li class="active"><a href="#">Home</a></li>
                 <li><a href="#about">About</a></li>
